--- a/modules/desktop/waybar/style.css
+++ b/modules/desktop/waybar/style.css
@@ -1,6 +1,6 @@
 * {
   font-family: "NotoSans Nerd Font", "Noto Sans", "Noto Sans CJK JP", sans-serif;
-  font-size: 16px;
+  font-size: 14px;
 }
 
 window#waybar {
@@ -22,18 +22,17 @@ window#waybar.hidden {
 }
 
 #workspaces button.focused {
-  color: #9ccfd8;
-  font-weight: bold;
+  color: #e0def4;
 }
 
 #workspaces button.urgent {
-  font-weight: bold;
   color: #eb6f92;
 }
 
 #window {
   padding-left: 15px;
   padding-right: 10px;
+  background-color: transparent;
 }
 
 #clock,
@@ -47,4 +46,9 @@ window#waybar.hidden {
 #tray {
   padding: 0 10px;
   background-color: transparent;
+}
+
+tooltip {
+  color: rgb(224, 222, 244);
+  background-color: rgba(25, 23, 36, 0.75);
 }
