--- a/modules/desktop/waybar/style.css
+++ b/modules/desktop/waybar/style.css
@@ -23,7 +23,7 @@ window#waybar.hidden {
 
 #workspaces button.focused {
   color: #e0def4;
-  border-bottom: #e0def4;
+  border-bottom: 2px solid #e0def4;
 }
 
 #workspaces button.urgent {
