--- a/modules/desktop/waybar/style.css
+++ b/modules/desktop/waybar/style.css
@@ -14,6 +14,9 @@ window#waybar.hidden {
     opacity: 0.2;
 }
 
+#workspaces {
+  margin: 5px 0px;
+}
 #workspaces button {
   padding: 0 5px;
   color: #6e6a86;
