--- a/modules/desktop/waybar/style.css
+++ b/modules/desktop/waybar/style.css
@@ -18,7 +18,10 @@ window#waybar.hidden {
   margin-left: 5px;
 }
 #workspaces button {
-  margin: 5px;
+  margin-top: 0;
+  margin-right: 5px;
+  margin-left: 5px;
+  margin-bottom: 5px;
   padding: 0 0;
   color: #6e6a86;
   background-color: transparent;
